Add new query to swagger
